--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       href="https://fonts.googleapis.com/css2?family=Linden+Hill&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/logoLaTira.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
